# chatGPT-discord-bot

./: README.md  main.py  pyproject.toml
src/: server.py
