[tool.poetry]
name = "repl_nix_chatGPT-discord-bot-3"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.2.2"
openai = "^0.27.4"
python-dotenv = "^1.0.0"
revChatGPT = "^4.2.5"
asgiref = "^3.6.0"
Flask = "^2.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
